- New Transition - Possible Bug Fix - Flicker to previous station

--- a/src/style/pages/artView.css
+++ b/src/style/pages/artView.css
@@ -4,30 +4,42 @@ body section#mobile {
 }
 
 body.artView section#mobile > .container {
-  /* opacity: 0; */
+  scale: 1.3;
+  /* scale: 0.7; */
+}
+
+body section#artView {
+  scale: 0.7;
+  /* scale: 1.3; */
+}
+
+body.artView section#mobile > .container > .item {
+  opacity: 0;
   /* translate: 100vw 0; */
-  translate: 0 -100vh;
+  /* translate: 0 -100vh; */
   pointer-events: none;
 }
 
 body section#artView {
-  /* opacity: 0; */
+  opacity: 0;
   /* translate: -100vw 0; */
-  translate: 0 100vh;
+  /* translate: 0 100vh; */
   pointer-events: none;
-
 }
 
 body.artView section#artView {
-  /* opacity: 1; */
-  translate: 0 0;
+  opacity: 1;
+  scale: 1;
+  /* translate: 0 0; */
   pointer-events: auto;
 }
 
 section#artView,
-section#mobile > .container {
-  /* transition: opacity 0.5s ease; */
-  transition: translate 0.25s ease-out;
+section#mobile > .container,
+section#mobile > .container > .item {
+  --_duration: 0.35s;
+  transition: opacity var(--_duration) ease, scale var(--_duration) ease;
+  /* transition: translate 0.25s ease-out; */
 }
 
 section#artView {
@@ -51,13 +63,45 @@ section#artView > .container {
   gap: 1rem;
 }
 
+@media (max-height: 650px) and (min-aspect-ratio: 1 / 1) {
+  section#artView > .container {
+    /* grid */
+  display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 1fr 1fr;
+  }
+  section#artView > .container button {
+    width: unset !important;
+    height: 100%;
+  }
+
+  section#artView > .container .fix {
+  /* sizing */
+  height: 100%;
+  width: 100%;
+
+  /* flex */
+    justify-content: flex-end;
+  }
+}
+
+section#artView > .container .fix {
+  /* sizing */
+  width: 100%;
+
+  /* flex */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 section#artView > .container button {
   /* sizing */
   padding: 0;
   margin: 0;
   aspect-ratio: 1/1 !important;
-  width: min(100%,max(400px,60vmin));
-
+  width: min(100%, max(400px, 60vmin));
 
   /* flex */
   display: flex;
@@ -96,7 +140,7 @@ section#artView > .container .text {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.25rem;
 
   /* styling */
@@ -120,4 +164,59 @@ section#artView > .container .text span.subTitle {
 
   /* styling */
   color: var(--dnu-light-color-100);
+}
+
+/** Player Background Animated **/
+@media not (prefers-reduced-motion) {
+  /* styles to apply if a user's device settings are set to reduced motion */
+  section#mobile > .background.animated {
+    /* position */
+    inset: 0 !important;
+    
+    /* sizing */
+    height: 150svh;
+    width: 150svw;
+
+    /* animation */
+    animation: backgroundAnimated 90s forwards infinite linear;
+
+    /* styling */
+    object-fit: cover;
+    filter: blur(50px) brightness(65%);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  @-moz-document url-prefix() {
+    /* Only applies to firefox mobile */
+    section#mobile > .background.animated {
+      /* sizing */
+      width: calc(100% + var(--_pad));
+      height: calc(100% + var(--_pad));
+
+      /* animation */
+      animation: none;
+
+      /* styling */
+      filter: blur(20px) brightness(75%);
+    }
+  }
+}
+
+@keyframes backgroundAnimated {
+  0% {
+    translate: 0svw 0svh;
+  }
+
+  25% {
+    translate: -50svw 0svh;
+  }
+
+  50% {
+    translate: -50svw -50svh;
+  }
+
+  75% {
+    translate: 0svw -50svh;
+  }
 }
